--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server --watch public/db.json --port=3001"
+    "json-server": "json-server --watch public/db.json --port=3001",
+    "server": "node server.js"
   },
   "eslintConfig": {
     "extends": [
