--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   },
   "proxy": "http://localhost:3001",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
     "json-server": "json-server --watch public/db.json --port=3001",
     "server": "node server.js"
   },
