--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "json-server": "^0.17.0"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
@@ -48,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.17.0"
+    // "json-server": "^0.17.0"
   }
 }
